# CMP

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  server.py
baseline/: __init__.py  baseline_agent.py
cmp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dataset/: __init__.py  dataset_generator.py
env/: __init__.py  action_model.py  moderation_env.py  observation_model.py
graders/: __init__.py  hate_grader.py  misinformation_grader.py  spam_grader.py
reward/: __init__.py  reward_function.py
server/: app.py
tasks/: __init__.py  hate_speech_task.py  misinformation_task.py  spam_task.py
